--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
     <header>
         <h1>Sagra della Rana e della Polenta - Menù Digitale</h1>
     </header>
-    <nav class="menu-buttons">
-        <button id="primi-btn">Primi</button>
-        <button id="secondi-btn">Secondi</button>
-        <button id="pizze-btn">Pizze</button>
-        <button id="dolci-btn">Dolci</button>
-        <button id="bar-btn">Bar</button>
+    <nav class="mobile-menu">
+        <input type="checkbox" id="menu-toggle">
+        <label for="menu-toggle" class="menu-icon">&#9776;</label>
+        <ul class="menu">
+            <li><a href="#primi">Primi</a></li>
+            <li><a href="#secondi">Secondi</a></li>
+            <li><a href="#pizze">Pizze</a></li>
+            <li><a href="#dolci">Dolci</a></li>
+            <li><a href="#bar">Bar</a></li>
+        </ul>
     </nav>
     <main id="menu-content">
         <!-- Qui verranno aggiunti dinamicamente i contenuti dei vari sotto-menu -->
